// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SkipLink basic 1`] = `
.c1 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #006750;
  font-weight: 500;
  text-decoration: underline;
  cursor: pointer;
}

.c1:hover {
  text-decoration: underline;
  color: #074b3b;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<div
  class="c0"
>
  <div>
    <a
      aria-hidden="true"
      class="c1 c2"
      id="main"
      tabindex="-1"
    />
    Main Content
    <input
      type="text"
      value="main content"
    />
  </div>
  <footer>
    <a
      aria-hidden="true"
      class="c1 c2"
      id="footer"
      tabindex="-1"
    />
    <input
      type="text"
      value="footer"
    />
  </footer>
</div>
`;

exports[`SkipLink basic 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iRGypN"
>
  <div>
    <a
      aria-hidden="true"
      class="StyledAnchor-sc-1rp7lwl-0 gcksWT SkipLinkTarget__HiddenAnchor-sc-16wjfgk-0 dLpcjH"
      id="main"
      tabindex="-1"
    />
    Main Content
    <input
      type="text"
      value="main content"
    />
  </div>
  <footer>
    <a
      aria-hidden="true"
      class="StyledAnchor-sc-1rp7lwl-0 gcksWT SkipLinkTarget__HiddenAnchor-sc-16wjfgk-0 dLpcjH"
      id="footer"
      tabindex="-1"
    />
    <input
      type="text"
      value="footer"
    />
  </footer>
</div>
`;

exports[`SkipLink basic 3`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iRGypN"
>
  <div>
    <a
      aria-hidden="true"
      class="StyledAnchor-sc-1rp7lwl-0 gcksWT SkipLinkTarget__HiddenAnchor-sc-16wjfgk-0 dLpcjH"
      id="main"
      tabindex="-1"
    />
    Main Content
    <input
      type="text"
      value="main content"
    />
  </div>
  <footer>
    <a
      aria-hidden="true"
      class="StyledAnchor-sc-1rp7lwl-0 gcksWT SkipLinkTarget__HiddenAnchor-sc-16wjfgk-0 dLpcjH"
      id="footer"
      tabindex="-1"
    />
    <input
      type="text"
      value="footer"
    />
  </footer>
</div>
`;

exports[`SkipLink should allow for single skip link 1`] = `
.c1 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #006750;
  font-weight: 500;
  text-decoration: underline;
  cursor: pointer;
}

.c1:hover {
  text-decoration: underline;
  color: #074b3b;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<div
  class="c0"
>
  <div>
    <a
      aria-hidden="true"
      class="c1 c2"
      id="main"
      tabindex="-1"
    />
    Main Content
    <input
      type="text"
      value="main content"
    />
  </div>
  <footer>
    <input
      type="text"
      value="footer"
    />
  </footer>
</div>
`;

exports[`SkipLink should allow for single skip link 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iRGypN"
>
  <div>
    <a
      aria-hidden="true"
      class="StyledAnchor-sc-1rp7lwl-0 gcksWT SkipLinkTarget__HiddenAnchor-sc-16wjfgk-0 dLpcjH"
      id="main"
      tabindex="-1"
    />
    Main Content
    <input
      type="text"
      value="main content"
    />
  </div>
  <footer>
    <input
      type="text"
      value="footer"
    />
  </footer>
</div>
`;

exports[`SkipLink should allow for single skip link 3`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iRGypN"
>
  <div>
    <a
      aria-hidden="true"
      class="StyledAnchor-sc-1rp7lwl-0 gcksWT SkipLinkTarget__HiddenAnchor-sc-16wjfgk-0 dLpcjH"
      id="main"
      tabindex="-1"
    />
    Main Content
    <input
      type="text"
      value="main content"
    />
  </div>
  <footer>
    <input
      type="text"
      value="footer"
    />
  </footer>
</div>
`;
